--- a/html-design/CMS/verification.html
+++ b/html-design/CMS/verification.html
@@ -15,18 +15,18 @@
     
     <body> 
     	<header>
-                <img src="images/logo.png" class="cms-logo" />
+            <a href="#" class="cms-logo"><img src="images/logo.png" /></a>
         </header>
 		<section>
 			<div class="container">
 				<div class="row">					
-					<div class="left_menu no-padding">
+					<div class="left_menu no-padding margin-bottom-50">
 						<div class="">							
 	      					<div class="collapse navbar-collapse no-padding" id="left_menu">
 	      						<div class="normal_title padding-15 hidden-xs">Informationen</div>
 	      						<ul class="nav navbar-nav pull-right settings-menu">
 							        <li>
-							        	<a href="vision.html" class="secondary_title active">							        	
+							        	<a href="vision.html" class="secondary_title">							        	
 							        		<span>Our Vision</span>
 							        	</a>
 							        </li>
@@ -92,7 +92,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="verification.html" class="secondary_title">							        	
+                                        <a href="verification.html" class="secondary_title active">							        	
                                             <span>Verification</span>
                                         </a>
                                     </li>
@@ -162,16 +162,14 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-sm-6">
-                                                <div class="form-group">
-                                                    <img src="images/capcha.jpg" class="width-100"/>
+                                            <div class="col-sm-12">
+                                                <div class="form-group capcha-wrapper">
+                                                    <img src="images/capcha.jpg" class="capcha-img"/>
                                                 </div>
-                                            </div>
-                                            <div class="col-sm-6">
-                                                <div class="form-group">
+                                                <div class="form-group button_wrapper">
                                                     <button class="black_button">Send</button>                                                   
                                                 </div>
-                                            </div>
+                                            </div>                                            
                                         </div>
                                     </form>                                    																							
                                 </div>                                
