--- a/html-design/CMS/reported-content.html
+++ b/html-design/CMS/reported-content.html
@@ -36,7 +36,7 @@
 								        </a>
 								    </li>	
 							        <li>
-							        	<a href="campaign.html" class="secondary_title active">							        		
+							        	<a href="campaign.html" class="secondary_title">							        		
 							        		<span>Campaigns</span>
 									    </a>
 								    </li>				        
@@ -93,7 +93,7 @@
                                     </li>
                                     <li>
                                         <a href="verification.html" class="secondary_title">							        	
-                                            <span>Verification</span>
+                                            <span>Verification</span> 
                                         </a>
                                     </li>
                                     <li>
@@ -102,7 +102,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="reported-content.html" class="secondary_title">							        	
+                                        <a href="reported-content.html" class="secondary_title active">							        	
                                             <span>Reported Content</span>
                                         </a>
                                     </li>
@@ -123,28 +123,78 @@
 					<div class="padding-rl-10 middle-section width-80">				 		
 						<div class="cms-middle-section">
                             <div class="panel-wrapper">
-                                <div class="col-sm-6 content-wrapper">
-                                    <div class="title">Campaign - Companies</div>								
-                                    <p>This text is an example text. This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.
+                                <div class="content-wrapper">
+                                    <div class="title">Reported problem</div>								
+                                    <p>This text is an example text. This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text. 
+                                            This text is an example text.This text is an example text.This text is an example text.This text is an 
+                                            example text.This text is an example text.This text is an example text.This text is an example text.
+                                            This text is an example text.This text is an example text.This text is an example text.This text is an 
+                                            example text.This text is an example text.This text is an example text.This text is an example text.
                                     </p>
-                                    <p>This text is an example text. This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.
-                                    </p>																								
-                                </div>
-                                <div class="col-sm-6 no-padding">
-                                    <img src="images/campaign-1.jpg" class="width-100" />
-                                </div>
-                            </div>
-                            <div class="panel-wrapper">
-                                <div class="col-sm-6 content-wrapper">
-                                    <div class="title">Campaign - Creators</div>								
-                                    <p>This text is an example text. This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.
-                                    </p>
-                                    <p>This text is an example text. This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.
-                                    </p>																								
-                                </div>
-                                <div class="col-sm-6 no-padding">
-                                    <img src="images/campaign-2.jpg" class="width-100" />
-                                </div>
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Your name</label>
+                                                    <input type="text" name="name">
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Your username </label>
+                                                    <input type="text" name="username">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Your email </label>
+                                                    <input type="email" name="email">
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>The account that you're reporting </label>
+                                                    <input type="text" name="account">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Subject</label>
+                                                    <input type="text" name="subject">
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Upload evidence (jpeg)</label>                                                    
+                                                    <input type="file" name="file-1[]" id="file-1" class="inputfile inputfile-1">
+                                                    <label for="file-1"><span>Select file</span></label>                                                       
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label>Text</label>
+                                                    <textarea class="full-width-textarea"></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <div class="form-group capcha-wrapper">
+                                                    <img src="images/capcha.jpg" class="capcha-img"/>
+                                                </div>
+                                                <div class="form-group button_wrapper">
+                                                    <button class="black_button">Send</button>                                                   
+                                                </div>
+                                            </div>                                            
+                                        </div>
+                                    </form>                                    																							
+                                </div>                                
                             </div>
 						</div>					
 					</div>					
