--- a/html-design/CMS/support.html
+++ b/html-design/CMS/support.html
@@ -15,12 +15,12 @@
     
     <body> 
     	<header>
-                <img src="images/logo.png" class="cms-logo" />
+            <a href="#" class="cms-logo"><img src="images/logo.png" /></a>
         </header>
 		<section>
 			<div class="container">
 				<div class="row">					
-					<div class="left_menu no-padding">
+					<div class="left_menu no-padding margin-bottom-50">
 						<div class="">							
 	      					<div class="collapse navbar-collapse no-padding" id="left_menu">
 	      						<div class="normal_title padding-15 hidden-xs">Informationen</div>
