delete account static HTML design

--- a/html-design/CMS/delete-account.html
+++ b/html-design/CMS/delete-account.html
@@ -41,7 +41,7 @@
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="campaign-policy.html" class="secondary_title active">							        		
+							        	<a href="campaign-policy.html" class="secondary_title">							        		
 							        		<span>Campaign policy</span>
 							        	</a>
 							        </li>
@@ -93,7 +93,7 @@
                                     </li>
                                     <li>
                                         <a href="verification.html" class="secondary_title">							        	
-                                            <span>Verification</span>
+                                            <span>Verification</span> 
                                         </a>
                                     </li>
                                     <li>
@@ -107,7 +107,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="delete-account.html" class="secondary_title">							        	
+                                        <a href="delete-account.html" class="secondary_title active">							        	
                                             <span>Delete account</span>
                                         </a>
                                     </li>
@@ -124,25 +124,42 @@
 						<div class="cms-middle-section">
                             <div class="panel-wrapper">
                                 <div class="content-wrapper">
-                                    <div class="title">Campaign Policy</div>								
+                                    <div class="title">Delete Account</div>								
                                     <p>This text is an example text. This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.This text is an example text.
                                     </p>
-                                    <div class="sub-title">This text is an example</div>	
-                                    <ul class="policy-points">
-                                        <li> 
-                                            <div class="question">What is Picstagraph?</div>
-                                            <div class="answer">This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example.This text is an example.</div>
-                                        </li>
-                                        <li>
-                                            <div class="question">What is Picstagraph?</div>
-                                            <div class="answer">This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example.This text is an example.</div>
-                                        </li>
-                                        <li>
-                                            <div class="question">What is Picstagraph?</div>
-                                            <div class="answer">This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example.This text is an example.</div>
-                                        </li>
-                                    </ul>																						
-                                </div>                                
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Username / Email </label>
+                                                    <input type="text" name="username">
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Password</label>
+                                                    <input type="text" name="password">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label>Repeat password</label>
+                                                    <input type="password" name="rpassword">
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6 margin-top-25"> 
+                                                <div class="form-group capcha-wrapper">
+                                                    <img src="images/capcha.jpg" class="capcha-img"/>
+                                                </div>
+                                                <div class="form-group button_wrapper col-md-12 col-sm-6">
+                                                    <button class="black_button">Delete account</button>                                                   
+                                                </div>
+                                            </div>
+                                        </div>   
+                                    </form>                                    																							
+                                </div>                                 
                             </div>
 						</div>					
 					</div>					
