login, campaign anf ad pages static HTML design

--- a/html-design/html/information.html
+++ b/html-design/html/information.html
@@ -28,29 +28,14 @@
 	      						<div class="normal_title padding-15 hidden-xs">Menu</div>
 	      						<ul class="nav navbar-nav pull-right">
 							        <li>
-							        	<a href="#" class="menu_news secondary_title">							        	
-							        		<span>News</span>
+							        	<a href="#" class="menu_news secondary_title active">							        	
+							        		<span>Information</span>
 							        	</a>
-							        </li>
-							        <li>
-							        	<a href="#" class="menu_explore secondary_title">							        		
-								        	<span>Explore</span>
-								        </a>
-								    </li>	
+							        </li>							        	
 							        <li>
 							        	<a href="#" class="menu_participants secondary_title">							        		<span>Participants</span>
 									    </a>
-								    </li>				        
-							        <li>
-							        	<a href="#" class="menu_user secondary_title">							        		
-							        		<span>User</span>
-							        	</a>
-							        </li>
-							        <li>
-							        	<a href="#" class="menu_pics secondary_title">							        		
-							        		<span>Pics</span>
-							        	</a>
-							        </li>
+								    </li>				        							        
 						      	</ul>
 	      					</div>
 						</div>
