--- a/html-design/html/pics.html
+++ b/html-design/html/pics.html
@@ -24,26 +24,26 @@
 	      						<div class="normal_title padding-15 hidden-xs">Menu</div>
 	      						<ul class="nav navbar-nav pull-right">
 							        <li>
-							        	<a href="#" class="menu_news secondary_title">							        	
+							        	<a href="news.html" class="menu_news secondary_title">							        	
 							        		<span>News</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="menu_explore secondary_title">							        		
+							        	<a href="explore.html" class="menu_explore secondary_title">							        		
 								        	<span>Explore</span>
 								        </a>
 								    </li>	
 							        <li>
-							        	<a href="#" class="menu_participants secondary_title">							        		<span>Participants</span>
+							        	<a href="participants.html" class="menu_participants secondary_title">							        		<span>Participants</span>
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="#" class="menu_user secondary_title">							        		
+							        	<a href="user.html" class="menu_user secondary_title">							        		
 							        		<span>User</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="menu_pics secondary_title active">							        		
+							        	<a href="pics.html" class="menu_pics secondary_title active">							        		
 							        		<span>Pics</span>
 							        	</a>
 							        </li>
