--- a/html-design/html/about.html
+++ b/html-design/html/about.html
@@ -207,32 +207,23 @@
 						<div class="">							
 	      					<div class="collapse navbar-collapse no-padding" id="left_menu">
 	      						<div class="normal_title padding-15 hidden-xs">Menu</div>
-	      						<ul class="nav navbar-nav pull-right">
-							        <li>
-							        	<a href="#" class="menu_news secondary_title">							        	
-							        		<span>News</span>
-							        	</a>
-							        </li>
-							        <li>
-							        	<a href="#" class="menu_explore secondary_title">							        		
-								        	<span>Explore</span>
-								        </a>
-								    </li>	
-							        <li>
-							        	<a href="#" class="menu_participants secondary_title">							        		<span>Participants</span>
-									    </a>
-								    </li>				        
-							        <li>
-							        	<a href="#" class="menu_user secondary_title">							        		
-							        		<span>User</span>
-							        	</a>
-							        </li>
-							        <li>
-							        	<a href="#" class="menu_pics secondary_title">							        		
-							        		<span>Pics</span>
-							        	</a>
-							        </li>
-						      	</ul>
+	      						<ul class="nav navbar-nav pull-right settings-menu">
+										<li>
+											<a href="subscriberpopup.html" class="secondary_title">							        	
+												<span>Newsfeed</span>
+											</a>
+										</li>
+										<li>
+											<a href="about.html" class="secondary_title active">							        		
+												<span>About</span>
+											</a>
+										</li>	
+										<li>
+											<a href="subscriberpopup.html" class="secondary_title">							        		
+												<span>Saved</span>
+											</a>
+										</li>				        							       
+									  </ul>
 	      					</div>
 						</div>
 					</div>
