--- a/html-design/html/index.html
+++ b/html-design/html/index.html
@@ -24,26 +24,26 @@
 	      						<div class="normal_title padding-15 hidden-xs">Menu</div>
 	      						<ul class="nav navbar-nav pull-right">
 							        <li>
-							        	<a href="#" class="menu_news secondary_title">							        	
+							        	<a href="index.html" class="menu_news secondary_title active">							        	
 							        		<span>News</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="menu_explore secondary_title">							        		
+							        	<a href="index.html" class="menu_explore secondary_title">							        		
 								        	<span>Explore</span>
 								        </a>
 								    </li>	
 							        <li>
-							        	<a href="#" class="menu_participants secondary_title">							        		<span>Participants</span>
+							        	<a href="index.html" class="menu_participants secondary_title">							        		<span>Participants</span>
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="#" class="menu_user secondary_title">							        		
+							        	<a href="user.html" class="menu_user secondary_title">							        		
 							        		<span>User</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="menu_pics secondary_title">							        		
+							        	<a href="pics.html" class="menu_pics secondary_title">							        		
 							        		<span>Pics</span>
 							        	</a>
 							        </li>
@@ -69,6 +69,7 @@
 							<div class="feed_content">
 								<div class="feed_image">
 									<img src="images/image.jpg" alt="image" class="img-responsive" />
+									<a class="more-strip">More</a>
 								</div>
 								<div class="feed_description padding-15">
 									<span class="secondary_title">
@@ -108,10 +109,49 @@
 								<div class="feed_image">
 									<img src="images/image.jpg" alt="image" class="img-responsive" />
 								</div>
-								<div class="feed_description padding-15">
-									<span class="secondary_title">
-										Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
-									</span>
+								<div class="feed_description padding-10">
+									<div class="normal_title">
+										Title
+									</div>
+									<div class="col-sm-6 no-padding">
+										<div class="info_wrapper">
+											<span class="normal_title">Start: </span><span class="secondary_title">10.10.2000</span>
+										</div>
+										<div class="info_wrapper">
+											<span class="normal_title">Procedure: </span><span class="secondary_title">Public</span>
+										</div>
+										<div class="info_wrapper">
+											<span class="normal_title">Target group: </span><span class="secondary_title">Female</span>
+										</div>
+									</div>
+									<div class="col-sm-6 no-padding">
+										<div class="info_wrapper">
+											<span class="normal_title">End: </span><span class="secondary_title">10.10.2000</span>
+										</div>
+										<div class="info_wrapper">
+											<span class="normal_title">Type: </span><span class="secondary_title">Video</span>
+										</div>
+										<div class="info_wrapper">
+											<span class="normal_title">Applications: </span><span class="secondary_title">2000/2000</span>
+										</div>
+									</div>
+									<hr>
+									<div class="col-sm-6 no-padding">
+										<div class="info_wrapper">
+											<span class="normal_title">Start: </span><span class="secondary_title">10.10.2000</span>
+										</div>
+										<div class="info_wrapper">
+											<span class="normal_title">Procedure: </span><span class="secondary_title">Public</span>
+										</div>										
+									</div>
+									<div class="col-sm-6 no-padding">
+										<div class="info_wrapper">
+											<span class="normal_title">End: </span><span class="secondary_title">10.10.2000</span>
+										</div>
+										<div class="info_wrapper">
+											<span class="normal_title">Type: </span><span class="secondary_title">Video</span>
+										</div>										
+									</div>
 								</div>
 							</div>
 							<div class="feed_footer padding-15">
@@ -133,60 +173,60 @@
 						<div class="normal_title padding-15">Favourite Campaigns</div>
 						<div class="campaigns">
 							<div class="campaign_wrapper">
-								<div class="col-sm-4 col-xs-2">
+								<div class="col-sm-3 col-xs-2">
 									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="col-sm-8 col-xs-10 no-padding">
+								<div class="col-sm-9 col-xs-10 no-padding">
 									<div class="normal_title">Title of campaigns</div>
 									<div class="secondary_title">User name</div>
 									<div class="grey_title">01.01.2000 in Category</div>
 								</div>
 							</div>
 							<div class="campaign_wrapper">
-								<div class="col-sm-4 col-xs-2">
+								<div class="col-sm-3 col-xs-2">
 									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="col-sm-8 col-xs-10 no-padding">
+								<div class="col-sm-9 col-xs-10 no-padding">
 									<div class="normal_title">Title of campaigns</div>
 									<div class="secondary_title">User name</div>
 									<div class="grey_title">01.01.2000 in Category</div>
 								</div>
 							</div>
 							<div class="campaign_wrapper">
-								<div class="col-sm-4 col-xs-2">
+								<div class="col-sm-3 col-xs-2">
 									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="col-sm-8 col-xs-10 no-padding">
+								<div class="col-sm-9 col-xs-10 no-padding">
 									<div class="normal_title">Title of campaigns</div>
 									<div class="secondary_title">User name</div>
 									<div class="grey_title">01.01.2000 in Category</div>
 								</div>
 							</div>
 							<div class="campaign_wrapper">
-								<div class="col-sm-4 col-xs-2">
+								<div class="col-sm-3 col-xs-2">
 									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="col-sm-8 col-xs-10 no-padding">
+								<div class="col-sm-9 col-xs-10 no-padding">
 									<div class="normal_title">Title of campaigns</div>
 									<div class="secondary_title">User name</div>
 									<div class="grey_title">01.01.2000 in Category</div>
 								</div>
 							</div>
 							<div class="campaign_wrapper">
-								<div class="col-sm-4 col-xs-2">
+								<div class="col-sm-3 col-xs-2">
 									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="col-sm-8 col-xs-10 no-padding">
+								<div class="col-sm-9 col-xs-10 no-padding">
 									<div class="normal_title">Title of campaigns</div>
 									<div class="secondary_title">User name</div>
 									<div class="grey_title">01.01.2000 in Category</div>
 								</div>
 							</div>
 							<div class="campaign_wrapper">
-								<div class="col-sm-4 col-xs-2">
+								<div class="col-sm-3 col-xs-2">
 									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="col-sm-8 col-xs-10 no-padding">
+								<div class="col-sm-9 col-xs-10 no-padding">
 									<div class="normal_title">Title of campaigns</div>
 									<div class="secondary_title">User name</div>
 									<div class="grey_title">01.01.2000 in Category</div>
