Created static HTML for ad page, user page, comments page for backoffice.

--- a/html-design/backoffice/comments.html
+++ b/html-design/backoffice/comments.html
@@ -39,7 +39,7 @@
 							        	</a>
                                     </li>
                                     <li>
-							        	<a href="pics.html" class="secondary_title active">							        	
+							        	<a href="pics.html" class="secondary_title">							        	
 							        		<span>Pics</span>
 							        	</a>
 							        </li>
@@ -49,7 +49,7 @@
 								        </a>
                                     </li>
                                     <li>
-							        	<a href="comments.html" class="secondary_title">							        	
+							        	<a href="comments.html" class="secondary_title active">							        	
 							        		<span>Comments</span>
 							        	</a>
                                     </li>	
@@ -94,80 +94,57 @@
                                 </div>
                             </form>
                         </div>	
-                        <div class="col-sm-6 pic-left-block">
-                            <div class="backoffice-pics pic-block">
-                                <img src="images/pic-1.jpg">
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                                <div class="status backoffice-status">
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Date  
+                        <div class="feed_wrapper">
+                            <div class="feed-comment">
+                                <div class="comment-wrapper">
+                                    <div class="comment-header">
+                                        <div class="col-sm-1 col-xs-1 no-padding profile_image">
+                                            <img src="images/image.jpg" alt="image" class="img-circle img-responsive">
                                         </div>
-                                        <div class="subtitle">
-                                            01.01.2000
+                                        <div class="col-sm-10 col-md-9 col-xs-7 commenter-info">
+                                            <b>User name</b> 01.01.2000 <b>Reply</b>
+                                            
                                         </div>
-                                    </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Reports
-                                        </div>
-                                        <div class="subtitle">
-                                            1
+                                        <div class="col-sm-12 col-md-2 col-xs-2 show_more_options">
+                                            <a href="#">• • •</a>
                                         </div>
                                     </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Status
-                                        </div>
-                                        <div class="subtitle">
-                                            Outstanding
-                                        </div>
-                                    </div>                                
+                                    <div class="comment-content">
+                                        <p>This <a href="#">#text</a> is an example. This text is an example. This text is an example from <a href="#">@Username</a>. This text is… <a href="#" class="read-more">read more</a></p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>    
-                        <div class="col-sm-6 pic-right-block">
-                            <div class="backoffice-pics pic-block">
-                                <img src="images/pic-2.jpg">
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                                <div class="status backoffice-status">
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Date  
-                                        </div>
-                                        <div class="subtitle">
-                                            01.01.2000
-                                        </div>
+                            <div class="status backoffice-status">
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Date  
                                     </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Reports
-                                        </div>
-                                        <div class="subtitle">
-                                            1
-                                        </div>
+                                    <div class="subtitle">
+                                        01.01.2000
                                     </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Status
-                                        </div>
-                                        <div class="subtitle">
-                                            Outstanding
-                                        </div>
-                                    </div>                                
                                 </div>
-                            </div>
-                        </div>                    					                        				
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Reports
+                                    </div>
+                                    <div class="subtitle">
+                                        1
+                                    </div>
+                                </div>
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Status
+                                    </div>
+                                    <div class="subtitle">
+                                        Outstanding
+                                    </div>
+                                </div>                                
+                            </div>					
+                        </div>						                        				
 					</div>
 					<div class="right_bar no-padding pull-left">
 						<div class="campaigns-right">							
-							<div class="normal_title padding-15">Reported pics</div>
+							<div class="normal_title padding-15">Reported comments</div>
 							<ul class="campaign-right-options">
 								<li>
 									<span>All</span>
