--- a/html-design/backoffice/user.html
+++ b/html-design/backoffice/user.html
@@ -39,7 +39,7 @@
 							        	</a>
                                     </li>
                                     <li>
-							        	<a href="pics.html" class="secondary_title active">							        	
+							        	<a href="pics.html" class="secondary_title">							        	
 							        		<span>Pics</span>
 							        	</a>
 							        </li>
@@ -54,7 +54,7 @@
 							        	</a>
                                     </li>	
                                     <li>
-							        	<a href="user.html" class="secondary_title">							        	
+							        	<a href="user.html" class="secondary_title active">							        	
 							        		<span>User</span>
 							        	</a>
 							        </li>
@@ -95,11 +95,12 @@
                             </form>
                         </div>	
                         <div class="col-sm-6 pic-left-block">
-                            <div class="backoffice-pics pic-block">
+                            <div class="backoffice-user pic-block">
                                 <img src="images/pic-1.jpg">
                                 <div class="name-wrapper">
                                     <div class="username">User name</div>
                                     <div class="name">Name</div>
+                                    <button class="filled_button">Subscribe</button>
                                 </div>
                                 <div class="status backoffice-status">
                                     <div class="status-wrapper">
@@ -130,11 +131,12 @@
                             </div>
                         </div>    
                         <div class="col-sm-6 pic-right-block">
-                            <div class="backoffice-pics pic-block">
+                            <div class="backoffice-user pic-block">
                                 <img src="images/pic-2.jpg">
                                 <div class="name-wrapper">
                                     <div class="username">User name</div>
                                     <div class="name">Name</div>
+                                    <button class="filled_button">Subscribe</button>
                                 </div>
                                 <div class="status backoffice-status">
                                     <div class="status-wrapper">
@@ -167,7 +169,7 @@
 					</div>
 					<div class="right_bar no-padding pull-left">
 						<div class="campaigns-right">							
-							<div class="normal_title padding-15">Reported pics</div>
+							<div class="normal_title padding-15">Reported users</div>
 							<ul class="campaign-right-options">
 								<li>
 									<span>All</span>
