--- a/html-design/backoffice/ad-page.html
+++ b/html-design/backoffice/ad-page.html
@@ -39,12 +39,12 @@
 							        	</a>
                                     </li>
                                     <li>
-							        	<a href="pics.html" class="secondary_title active">							        	
+							        	<a href="pics.html" class="secondary_title">							        	
 							        		<span>Pics</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="ad-page.html" class="secondary_title">							        		
+							        	<a href="ad-page.html" class="secondary_title active">							        		
 								        	<span>Ad</span>
 								        </a>
                                     </li>
@@ -94,80 +94,75 @@
                                 </div>
                             </form>
                         </div>	
-                        <div class="col-sm-6 pic-left-block">
-                            <div class="backoffice-pics pic-block">
-                                <img src="images/pic-1.jpg">
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
+                        <div class="feed_wrapper">
+                            <div class="feed_header">
+                                <div class="col-sm-1 col-xs-1 no-padding profile_image">
+                                    <img src="images/image.jpg" alt="image" class="img-circle img-responsive" />                                    
                                 </div>
-                                <div class="status backoffice-status">
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Date  
-                                        </div>
-                                        <div class="subtitle">
-                                            01.01.2000
-                                        </div>
-                                    </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Reports
-                                        </div>
-                                        <div class="subtitle">
-                                            1
-                                        </div>
-                                    </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Status
-                                        </div>
-                                        <div class="subtitle">
-                                            Outstanding
-                                        </div>
-                                    </div>                                
+                                <div class="col-sm-9 col-xs-7 no-padding">
+                                    <div class="normal_title">User name</div>									
+                                    <div class="grey_title">Sponsored in Category</div>
+                                </div>
+                                <div class="col-sm-2 col-xs-2 like_wrapper">
+                                    <img src="images/blue_heart.svg" alt="like" class="pull-right" />
+                                </div>
+                            </div>	
+                            <div class="feed_content">
+                                <div class="feed_image">
+                                    <img src="images/feed-img.jpg" alt="image" class="img-responsive" />  
+                                    <a class="more-strip">More</a>                                  
+                                </div>
+                                <div class="feed_description padding-10">								
+                                    <span class="secondary_title">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                                        <a href="#" class="read-more">read more</a>
+                                    </span>
                                 </div>
                             </div>
-                        </div>    
-                        <div class="col-sm-6 pic-right-block">
-                            <div class="backoffice-pics pic-block">
-                                <img src="images/pic-2.jpg">
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
+                            <div class="feed_footer padding-15">
+                                <div class="messages">
+                                    <span class="count">100</span>
+                                    <img src="images/feed_msg.svg">
                                 </div>
-                                <div class="status backoffice-status">
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Date  
-                                        </div>
-                                        <div class="subtitle">
-                                            01.01.2000
-                                        </div>
-                                    </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Reports
-                                        </div>
-                                        <div class="subtitle">
-                                            1
-                                        </div>
-                                    </div>
-                                    <div class="status-wrapper">
-                                        <div class="title">
-                                            Status
-                                        </div>
-                                        <div class="subtitle">
-                                            Outstanding
-                                        </div>
-                                    </div>                                
+                                <div class="likes">
+                                    <span class="count">100</span>
+                                    <img src="images/feed_like.svg">
                                 </div>
-                            </div>
-                        </div>                    					                        				
+                                <div class="show_more_options">	
+                                    <a href="#">• • •</a>														
+                                </div>
+                            </div>	
+                            <div class="status backoffice-status">
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Date  
+                                    </div>
+                                    <div class="subtitle">
+                                        01.01.2000
+                                    </div>
+                                </div>
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Reports
+                                    </div>
+                                    <div class="subtitle">
+                                        1
+                                    </div>
+                                </div>
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Status
+                                    </div>
+                                    <div class="subtitle">
+                                        Outstanding
+                                    </div>
+                                </div>                                
+                            </div>					
+                        </div>						                        				
 					</div>
 					<div class="right_bar no-padding pull-left">
 						<div class="campaigns-right">							
-							<div class="normal_title padding-15">Reported pics</div>
+							<div class="normal_title padding-15">Reported ads</div>
 							<ul class="campaign-right-options">
 								<li>
 									<span>All</span>
