--- a/html-design/backoffice/post-popup.html
+++ b/html-design/backoffice/post-popup.html
@@ -21,50 +21,21 @@
 					<div class="left_menu no-padding backoffice-leftside-bar">
 						<div class="">							
 	      					<div class="collapse navbar-collapse no-padding" id="left_menu">
-	      						<div class="normal_title padding-15 hidden-xs">Reported content</div>
+	      						<div class="normal_title padding-15 hidden-xs">Review</div>
 	      						<ul class="nav navbar-nav settings-menu">
 							        <li>
-							        	<a href="images.html" class="secondary_title">							        	
-							        		<span>Images </span>
-							        	</a>
-                                    </li>
-                                    <li>
-							        	<a href="videos.html" class="secondary_title">							        	
-							        		<span>Videos</span>
-							        	</a>
-                                    </li>
-                                    <li>
-							        	<a href="campaigns-page.html" class="secondary_title active">							        	
-							        		<span>Campaigns</span>
-							        	</a>
-                                    </li>
-                                    <li>
-							        	<a href="pics.html" class="secondary_title">							        	
-							        		<span>Pics</span>
+							        	<a href="campaign.html" class="secondary_title">							        	
+							        		<span>Campaign</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="ad-page.html" class="secondary_title">							        		
+							        	<a href="ad.html" class="secondary_title active">							        		
 								        	<span>Ad</span>
 								        </a>
-                                    </li>
-                                    <li>
-							        	<a href="comments.html" class="secondary_title">							        	
-							        		<span>Comments</span>
-							        	</a>
-                                    </li>	
-                                    <li>
-							        	<a href="user.html" class="secondary_title">							        	
-							        		<span>User</span>
-							        	</a>
-							        </li>
+								    </li>	
 							        <li>
                                         <div class="filter-wrapper">
                                             <ul>
-                                                <li>
-                                                    <div class="label">Relevance</div>
-                                                    <div class="value">New</div>
-                                                </li>
                                                 <li>
                                                     <div class="label">Status</div>
                                                     <div class="value">Outstanding</div>
@@ -102,7 +73,6 @@
                                 <div class="col-sm-9 col-xs-7 no-padding">
                                     <div class="normal_title">User name</div>									
                                     <div class="grey_title">Sponsored in Category</div>
-                                    <div class="grey_title">01.01.2000 in Category</div>
                                 </div>
                                 <div class="col-sm-2 col-xs-2 like_wrapper">
                                     <img src="images/blue_heart.svg" alt="like" class="pull-right" />
@@ -110,51 +80,17 @@
                             </div>	
                             <div class="feed_content">
                                 <div class="feed_image">
-                                    <img src="images/image.jpg" alt="image" class="img-responsive" />
+                                    <img src="images/feed-img.jpg" alt="image" class="img-responsive" />
+                                    <a class="more-strip">More</a>
                                 </div>
                                 <div class="feed_description padding-10">
                                     <div class="normal_title">
                                         Title
-                                    </div>
-                                    <div class="col-sm-6 no-padding">
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Start: </span><span class="secondary_title">10.10.2000</span>
-                                        </div>
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Procedure: </span><span class="secondary_title">Public</span>
-                                        </div>
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Target group: </span><span class="secondary_title">Female</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 no-padding">
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">End: </span><span class="secondary_title">10.10.2000</span>
-                                        </div>
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Type: </span><span class="secondary_title">Video</span>
-                                        </div>
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Applications: </span><span class="secondary_title">2000/2000</span>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="col-sm-6 no-padding">
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Start: </span><span class="secondary_title">10.10.2000</span>
-                                        </div>
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Procedure: </span><span class="secondary_title">Public</span>
-                                        </div>										
-                                    </div>
-                                    <div class="col-sm-6 no-padding">
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">End: </span><span class="secondary_title">10.10.2000</span>
-                                        </div>
-                                        <div class="info_wrapper">
-                                            <span class="normal_title">Type: </span><span class="secondary_title">Video</span>
-                                        </div>										
-                                    </div>
+                                    </div>									
+                                    <span class="secondary_title">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                                        <a href="#" class="read-more">read more</a>
+                                    </span>
                                 </div>
                             </div>
                             <div class="feed_footer padding-15">
@@ -170,10 +106,10 @@
                                     <a href="#">• • •</a>														
                                 </div>
                             </div>	
-                            <div class="status backoffice-status">
+                            <div class="status">
                                 <div class="status-wrapper">
                                     <div class="title">
-                                        Date  
+                                        Start 
                                     </div>
                                     <div class="subtitle">
                                         01.01.2000
@@ -181,10 +117,26 @@
                                 </div>
                                 <div class="status-wrapper">
                                     <div class="title">
-                                        Reports
+                                        Start 
                                     </div>
                                     <div class="subtitle">
-                                        1
+                                        01.01.2000
+                                    </div>
+                                </div>
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Daily budget
+                                    </div>
+                                    <div class="subtitle">
+                                        500€
+                                    </div>
+                                </div>
+                                <div class="status-wrapper">
+                                    <div class="title">
+                                        Clicks
+                                    </div>
+                                    <div class="subtitle">
+                                        2000
                                     </div>
                                 </div>
                                 <div class="status-wrapper">
@@ -200,7 +152,7 @@
 					</div>
 					<div class="right_bar no-padding pull-left">
 						<div class="campaigns-right">							
-							<div class="normal_title padding-15">Reported images</div>
+							<div class="normal_title padding-15">Campaigns</div>
 							<ul class="campaign-right-options">
 								<li>
 									<span>All</span>
@@ -218,13 +170,47 @@
                                     <span>Not processed</span>
                                     <span class="pull-right">1</span>
                                 </li>
-							</ul>							
+							</ul>
+							<div class="normal_title padding-15">Ads</div>
+							<ul class="campaign-right-options">
+                                <li>
+                                    <span>All</span>
+                                    <span class="pull-right">1</span>
+                                </li>
+                                <li>
+                                    <span>Outstanding</span>
+                                    <span class="pull-right">1</span>
+                                </li>
+                                <li>
+                                    <span>Processed</span>
+                                    <span class="pull-right">1</span>
+                                </li>
+                                <li>
+                                    <span>Not processed</span>
+                                    <span class="pull-right">1</span>
+                                </li>
+							</ul>
 						</div>						
 					</div>
 				</div>
 			</div>
-		</section>
+        </section>
+        <!-- Modal -->
+		<div id="myModal" class="modal fade post-popup" role="dialog">
+			<div class="modal-dialog">
+                <div class="post-action-links">
+                    <a href="#">Report post</a>
+                    <a href="#">Save post </a>
+                    <a href="#">locks / unlocks content </a>
+                </div>
+			</div>
+	  </div>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+        <script type="text/javascript">
+    		$(document).ready(function(){
+		        $('#myModal').modal('show');
+		    });
+    	</script>
 	</body>
 </html>
