dashboard and CMS Management design

--- a/html-design/backoffice/cms-managment.html
+++ b/html-design/backoffice/cms-managment.html
@@ -69,12 +69,12 @@
 									<div class="normal_title padding-15 hidden-xs">Backoffice</div>
 									<ul class="nav navbar-nav pull-right settings-menu">
 										<li>
-											<a href="dashboard.html" class="secondary_title active">							        	
+											<a href="dashboard.html" class="secondary_title">							        	
 												<span>Dashboard</span>
 											</a>
 										</li>
 										<li>
-											<a href="cms-managment.html" class="secondary_title">							        	
+											<a href="cms-managment.html" class="secondary_title active">							        	
 												<span>CMS managment</span>
 											</a>
 										</li>
@@ -103,30 +103,28 @@
 							</div>
 						</div>
 						<div class="padding-rl-10 middle-section width-80">				 		
-							<div class="dashboard-middle-section margin-bottom-50">
-								<div class="normal_title padding-15">Navigation</div>
-								<div class="review-report-btns">
-									<button class="filled_button pull-left">Review</button>
-									<button class="filled_button pull-right">Reported content</button>
-								</div>
+							<div class="dashboard-middle-section margin-bottom-50">								
 								<div class="title_with_dropdown">
-									<span>Key statistics</span>
+									<span>CMS management</span>
 									<select>
-										<option>Period </option>
+										<option>Language </option>
 										<option>Option 1 </option>
 										<option>Option 2 </option>
 									</select>
+									<button>
+
+									</button>
 								</div>
 								<div class="dashboard-tbl">
 									<table>
 										<thead>
 											<tr>
-												<th>Registered users</th>
-												<th>Active users</th>
-												<th>Deactivated accounts</th>
-												<th>Turnover</th>
-												<th>Reviews</th>
-												<th>Reported content</th>
+												<th>Title of page</th>
+												<th>Language</th>
+												<th>Most recent change</th>
+												<th>Created by</th>
+												<th>Options</th>
+												<th>Status</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -135,205 +133,15 @@
 												<td></td>
 												<td></td>
 												<td></td>
-												<td></td>
-												<td></td>
+												<td><a href="#">Edit</a><a href="#">Preview</a></td>
+												<td>
+													<span class="green-circle"></span>
+													Active
+												</td>
 											</tr>
 										</tbody>
 									</table>
-								</div>
-								<div class="title_with_dropdown">
-									<span>Content statistics</span>
-									<select>
-										<option>Period </option>
-										<option>Option 1 </option>
-										<option>Option 2 </option>
-									</select>
-								</div>
-								<div class="dashboard-tbl">
-									<table>
-										<thead>
-											<tr>
-												<th>Images</th>
-												<th>Videos</th>
-												<th>Campaign company</th>
-												<th>Image campaign</th>
-												<th>Video campaign</th>
-												<th>Campaign creator</th>
-												<th>Pics</th>
-												<th>Ads</th>
-												<th>Total</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Total</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>All</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>No category</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>Art & Culture</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-								<div class="title_with_dropdown">
-									<span>Campaign statistics company</span>
-									<select>
-										<option>Period </option>
-										<option>Option 1 </option>
-										<option>Option 2 </option>
-									</select>
-								</div>
-								<div class="dashboard-tbl">
-									<table>
-										<thead>
-											<tr>
-												<th>Number</th>
-												<th>Active campaigns</th>
-												<th>Closed campaigns</th>
-												<th>Campaigns temp. closed</th>
-												<th>Potential turnover</th>
-												<th>Total turnover</th>
-												<th>Average conv. rate</th>												
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Total</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>All</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>No category</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>Art & Culture</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-								<div class="title_with_dropdown">
-									<span>Ad statisitcs</span>
-									<select>
-										<option>Period </option>
-										<option>Option 1 </option>
-										<option>Option 2 </option>
-									</select>
-								</div>
-								<div class="dashboard-tbl">
-									<table>
-										<thead>
-											<tr>
-												<th>Number</th>
-												<th>Active ads</th>
-												<th>Closed ads</th>
-												<th>Ads temp. closed</th>
-												<th>Potential turnover</th>
-												<th>Total turnover</th>
-												<th>Average conv. rate</th>												
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Total</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>All</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>No category</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td>Art & Culture</td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
+								</div>								
 							</div>					 
 						</div>					
 					</div>
